--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            max-height: 40vh; /* Allow more vertical space than delete list */
+            max-height: 65vh; /* Increased to show more items */
             overflow-y: auto;
         }
         .favorite-list-item {
@@ -430,6 +430,27 @@
         }
         .custom-prompt-dialog .no-favorites-message {
             text-align: center; color: var(--icon-color); padding: 10px; font-weight: normal;
+        }
+
+        /* --- Custom Scrollbar for Lists --- */
+        .delete-links-list::-webkit-scrollbar,
+        .favorites-list::-webkit-scrollbar {
+            width: 6px;
+        }
+        .delete-links-list::-webkit-scrollbar-track,
+        .favorites-list::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        .delete-links-list::-webkit-scrollbar-thumb,
+        .favorites-list::-webkit-scrollbar-thumb {
+            background-color: var(--icon-color);
+            border-radius: 3px;
+        }
+        .delete-links-list::-webkit-scrollbar-thumb {
+            border: 2px solid var(--bg-color); /* Match list background for padding effect */
+        }
+        .favorites-list::-webkit-scrollbar-thumb {
+            border: 2px solid var(--item-bg); /* Match dialog background for padding effect */
         }
 
         .actions-bar {
@@ -533,8 +554,8 @@
             width: 100%;
             max-width: 320px;
             display: flex;
-            flex-direction: column;
-            gap: 10px; /* Consistent gap between elements */
+            flex-direction: column; 
+            gap: 8px; /* Reduced gap for a more compact look */
             transition: padding 0.2s ease-in-out, gap 0.2s ease-in-out; /* Smooth transition */
         }
         .custom-prompt-dialog .custom-prompt-title {
@@ -555,6 +576,11 @@
             justify-content: space-between;
             align-items: center;
             gap: 10px;
+        }
+        .custom-prompt-actions button {
+            /* Make dialog buttons slightly smaller */
+            padding: 6px 10px;
+            font-size: 0.9em;
         }
         .custom-prompt-actions-right {
             display: flex;
