Updated website content

--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+            font-weight: bold;
         }
 
         /* --- Favorites Prompt Styles --- */
@@ -453,6 +454,7 @@
             cursor: pointer;
             border-bottom: 1px solid var(--border-color);
             user-select: none;
+            font-weight: bold;
         }
         .theme-color-item:last-child {
             border-bottom: none;
@@ -713,7 +715,7 @@
                 <!-- Favorite links will be populated here by JS -->
             </ul>
             <div class="custom-prompt-actions">
-                <button id="favoritesPromptClose" class="secondary" style="width: 100%;">Close</button>
+                <button id="favoritesPromptClose" style="width: 100%;">Close</button>
             </div>
         </div>
     </div>
